# style-transfer-pytorch

./: .gitignore  LICENSE.md  README.md  pyproject.toml
styletransfer/: model.py  transfer.py
