[tool.poetry]
name = "styletransfer"
version = "0.1.0"
description = "Neural Style transfer in PyTorch"
license = "MIT"
readme = "README.md"
authors = ["Lucas Wolf <iamlucaswolf@gmail.com>"]
repository = "https://github.com/iamlucaswolf/style-transfer-pytorch"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
